# worldmonitor

./: package.json
public/data/: roads-major.geojson
scripts/: build-major-roads.mjs
v2-rust/: CRATES.md  Cargo.toml  README.md
v2-rust/src/: main.rs
v3-rust-server/: Cargo.toml  README.md  ROADMAP.md
v3-rust-server/src/: config.rs  error.rs  in_process.rs  lib.rs  main.rs  routes.rs
v3-rust-server/src/cache/: mod.rs
v3-rust-server/src/domains/: aviation.rs  climate.rs  conflict.rs  cyber.rs  displacement.rs  economic.rs  infrastructure.rs  infrastructure_ops.rs  intelligence.rs  maritime.rs  market.rs  military.rs  mod.rs  news.rs  prediction.rs  research.rs  seismology.rs  unrest.rs  wildfire.rs
v3-rust-server/src/http/: auth.rs  cors.rs
