[package]
name = "v2-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.29.0"
feed-rs = "2.3.1"
ratatui = { version = "0.30.0", default-features = true }
ratatui-textarea = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt"] }
v3-rust-server = { path = "../v3-rust-server" }
