[package]
name = "v3-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.6"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
futures = "0.3.32"
http = "1.3.1"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
